# tts-bot

./: .dockerignore  .gitignore  DELETE_FILES.txt  Dockerfile  GameStage.tsx  PATCH_NOTES.md  PATCH_NOTES_TICKETS.md  PATCH_NOTES_TICKETS_APPEARANCE_OPTIONS.md  PATCH_NOTES_TICKETS_CUSTOM_OPTIONS.md  PATCH_NOTES_TICKETS_EDITOR.md  PATCH_NOTES_TICKETS_EMOJI_FIX.md  PATCH_NOTES_TICKETS_MODAL_V2.md  PATCH_NOTES_TICKETS_OPTION_EDITOR_V2.md  PATCH_NOTES_TICKETS_PANEL_IMAGE_FLOW.md  PATCH_NOTES_TICKETS_WEBHOOK_ACTIONS_FIX.md  PATCH_NOTES_TICKETS_WEBHOOK_PERMISSIONS.md  PATCH_NOTES_TICKETS_WEBHOOK_PER_CHANNEL.md  PATCH_NOTES_TTS_LATENCY_FASTPATH.md  PATCH_NOTES_V14_2_1.md  PATCH_NOTES_V14_2_2.md  PATCH_NOTES_V15.md  PATCH_NOTES_V15_1.md  PATCH_NOTES_V15_2.md  PATCH_NOTES_V15_3.md  PATCH_NOTES_V15_3_1.md  PATCH_NOTES_V16.md  PATCH_NOTES_V16_1.md  PATCH_NOTES_V16_2.md  PATCH_NOTES_V17.md  SMOKE_TEST.md  __init__.py  alert.sh  backup-configs.sh  base.py  bot.py  bot_fixed.py  bot_fixed_mongo_fallback.py  callkeeper_service.py  changed_files.txt  cleanup-audio-temp.sh  (+34 more)
android/core-worker-app/app/src/main/cpp/: CMakeLists.txt  coreworker_executor.cpp  coreworker_runner.c
callkeeper_runtime/: __init__.py  rescue_cmd.py  rescue_shell.py  runtime.py  settings.py  store.py
cogs/: __init__.py  antimzk (1).py  antimzk-v3.py  antimzk.py  birthday.py  call_keeper.py  color_roles.py  dashboard_sync.py  music.py  role_cooldown.py  say.py  temp_sfx_loop.py  terminal_cmd.py  tts_embed_utils.py  tts_history_utils.py  tts_panel_apply_utils.py  tts_prefix_utils.py  tts_public_state_fix.py  tts_resolution_utils.py  tts_source_panel_message_fix.py  tts_status_utils.py  tts_text_utils.py  tts_toggle.py  tts_voice-13-fixed.py  tts_voice-16-prefix-panels-cooldown-4.py  tts_voice-16-prefix-panels-cooldown.py  tts_voice-9073.py  tts_voice.py  tts_voice_announce_author_fixed.py  tts_voice_announce_author_fixed_v2.py  tts_voice_announce_name_custom.py  tts_voice_based_on_latest_slash_fix_fixed.py  tts_voice_bugfix_public_and_target.py  tts_voice_bugfix_public_and_target_fixed3.py  tts_voice_choices_fixed.py  tts_voice_common.py  tts_voice_completo_com_only_target.py  tts_voice_connected_fix2.py  tts_voice_dual_prefixes_cleaner.py  tts_voice_emoji_name_fix.py  (+25 more)
music_system/: __init__.py  api_providers.py  audio_router.py  diagnostics.py  errors.py  extractor.py  loading_reaction.py  models.py  musicnode_ui.py  providers.py  ui.py  worker_node.py
scripts/: build-core-linux-embedded-binaries.sh  core-linux-embedded-binaries-build-pipeline.py  core-linux-embedded-binaries-intake.py  core-linux-embedded-binaries-metadata.example.json  core-linux-embedded-binaries-metadata.v10.json  core-linux-embedded-binaries-metadata.v11.json  core-linux-embedded-binaries-metadata.v12.json  core-linux-embedded-binaries-metadata.v8.json  (+13 more)
(+452 files in other folders)
